<resources>
    <string name="app_name">Mes Contact</string>
    <string name="supprimer_tout">Tout supprimer</string>
    <string name="nouveauContact">Nouveau Contact</string>
    <string name="fav">Favoris</string>
    <string name="contact">Contacts</string>
    <string name="sms">Sms</string>
    <string name="phone">Telephone</string>
    <string name="photo">Photo</string>
    <string name="ajouterContact">Ajouter Un contact</string>
    <string name="modificationContact">Modifier Un contact</string>

    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="tel">Téléphone</string>
    <string name="adress">Adresse</string>
    <string name="mail">Mail</string>
    <string name="SendMAil">Envoyer un mail</string>
    <string name="loca">Localiser</string>
    <string name="annuler">Annuler</string>
    <string name="valider">Valider</string>
    <string name="modif">Modifier</string>
    <string name="sup">Supprimé</string>
    <string name="pre">Pre</string>
    <string name="prenom2">Prenom</string>
    <string name="adr">Adr</string>
    <string name="adresse">Adresse</string>
    <string name="tele">Tel</string>
    <string name="telephone">Telephone</string>
    <string name="qrcode">QrCode</string>
    <string name="supprimer">Supprimer</string>
    <string name="envoi_sms">Envoi sms</string>
    <string name="appeler">Appeler</string>
    <string name="envoyer_un_mail">Envoyer un mail</string>
    <string name="localiser">Localiser</string>
    <string name="modifier">Modifier</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="ajouter_la_bdd">Ajouter à la BDD</string>
    <string name="ajouter_le_contact">Ajouter le contact</string>
    <string name="AjouterAufav">Ajouter aux favoris</string>


</resources>
