<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/supp"
        android:orderInCategory="100"
        android:title="@string/supprimer"
        />
    <item
        android:id="@+id/sms"
        android:orderInCategory="100"
        android:title="@string/envoi_sms"
        />
    <item
        android:id="@+id/appel"
        android:orderInCategory="100"
        android:title="@string/appeler"
        />
    <item
        android:id="@+id/mail"
        android:orderInCategory="100"
        android:title="@string/envoyer_un_mail"
        />
    <item
        android:id="@+id/localiser"
        android:orderInCategory="100"
        android:title="@string/localiser"
        />
    <item
        android:id="@+id/menumodif"
        android:orderInCategory="100"
        android:title="@string/modifier"
        />

</menu>